--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <h2>Postmatch</h2>
             <div class="mini-box">
                 <h3>TIPPED DURING MATCH?</h3>
+                <div class="checkbox-container">
                 <input type="checkbox" class="custom-checkbox" id="TippedDuringMatch">
             </div>
             <div class="mini-box">
