--- a/index.html
+++ b/index.html
@@ -130,11 +130,13 @@
         <!-- Postmatch Widget -->
         <div class="widget" id="PostMatch">
             <h2>Postmatch</h2>
-            <div class="mini-box">
-                <h3>TIPPED DURING MATCH?</h3>
-                <div class="checkbox-container">
+        <div class="mini-box">
+            <h3>TIPPED DURING MATCH?</h3>
+            <div class="checkbox-container">
                 <input type="checkbox" class="custom-checkbox" id="TippedDuringMatch">
+                <label for="TippedDuringMatch"></label>
             </div>
+        </div>
             <div class="mini-box">
                 <h3>ROBOT SPEED</h3>
                 <select id="RobotSpeed">
