--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4063 Reefscape QRScout</title>
+    <title>4063 Crescendo QRScout</title>
     <script src="QR-CodeGen.js"></script>
 	<script src="indexJavaScript.js"></script>
     <script>
-   if ('serviceWorker' in navigator) {
+    if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('/service-worker.js')
             .then(function(registration) {
               console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }, function(err) {
               console.log('ServiceWorker registration failed: ', err);
-                    });
             });
         });
-	
+      }
     else{
         document.getElementById("prematch-widget").style.display = "none";
     }
@@ -60,7 +61,7 @@
             </div>
 
             <div class="mini-box">
-		<h3>TEAM NUMBER</h3>
+                <h3>TEAM NUMBER</h3>
                 <input type="number" id="prematch-team-number" placeholder="Required">
             </div>
         </div>
@@ -74,6 +75,7 @@
                     <input type="checkbox" class="custom-checkbox" id="centerlineNotes">
                     <label for="centerlineNotes"></label>
                 </div>
+            </div>
 			<div class="mini-box">
 				<h3>SPEAKER SCORED</h3>
 				<button type="button" onclick="updateButtonNum('speakerScored', -1)">-</button>
@@ -95,7 +97,6 @@
                 <span id="tampScored">0</span>
                 <button type="button" onclick="updateButtonNum('tampScored', 1)">+</button>
             </div>
-
             <div class="mini-box">
                 <h3>AMP MISSED</h3>
                 <button type="button" onclick="updateButtonNum('tampMissed', -1)">-</button>
@@ -132,7 +133,6 @@
             </div>
 			<div class="mini-box">
 				<h3>END POSITION</h3>
-				
                 <select id="End-Position">
                 	<option value="Choose_Answer">Choose Answer</option>
                     <option value="No_Climb">No Climb</option>
@@ -260,10 +260,6 @@
 		</button>
     </div>
     <div class="overlay" id="overlay"></div>
-
-    <footer>
-        <p>Made By Michael Cariaga And Antonio Scott</p>
-    </footer>
 
 </body>
 </html>
